# voxcut

./: .gitignore  README.md
.claude/: launch.json
backend/: pyproject.toml  tests_moment.py  tests_segment.py  tests_source.py
backend/voxcut/: config.py  db.py  edl_store.py  main.py  music.py  timeline_ops.py
backend/voxcut/api/: beats.py  candidates.py  edl.py  jobs.py  library.py  music.py  projects.py  settings_api.py  system.py  transcript.py  voiceover.py
backend/voxcut/asr/: transcribe.py
backend/voxcut/brain/: client.py  judge.py  plan.py  prompts.py  schemas.py  segment.py  steps_helpers.py
backend/voxcut/jobs/: bus.py  runner.py
backend/voxcut/jobs/steps/: __init__.py  assemble.py  beats.py  demo.py  export.py  generate.py  moment.py  plan.py  qc.py  reroll.py  source.py  transcribe.py
backend/voxcut/media/: compose.py  ingest.py  probe.py  render.py
backend/voxcut/models/: __init__.py
backend/voxcut/moments/: embed.py  frames.py  scenes.py  select.py  signals.py
backend/voxcut/sourcing/: base.py  local.py  rank.py  youtube.py
backend/voxcut/static/: index.html
docs/: roadmap.md  style-degenerocity.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  store.ts  styles.css  types.ts
frontend/src/components/: Editor.tsx  Inspector.tsx  JobBar.tsx  Library.tsx  Projects.tsx  Settings.tsx  Timeline.tsx
launcher/: Start VOXCUT.bat  Start VOXCUT.command  start.sh
