[project]
name = "voxcut"
version = "0.1.0"
description = "VOXCUT — AI fast-cut commentary video editor"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "python-multipart>=0.0.12",
    "python-ulid>=3.0",
    "httpx>=0.27",
    "pydantic>=2.9",
    "faster-whisper>=1.0",
    "numpy>=1.26",
    "openai>=1.50",
    "rapidfuzz>=3.14.5",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
